Adding LogIn/LogOut/Register/ChangingPassword and username